Boolean.valueOf: use instead of new Boolean
Fixes https://osgi.org/bugzilla/show_bug.cgi?id=180